[project]
name = "testtravelwebsiteproject"
version = "0.1.0"
description = ""
authors = [
    {name = "dhananjaya2007",email = "dhananjaya2007@hotmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
selenium = "^4.11.2"
pytest = "7.4.0"
junit-xml = "1.9"
pytest-html = "4.1.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
